@@ -67,6 +67,9 @@ Bug Fixes
 * SOLR-6030: Use System.nanoTime() instead of currentTimeInMills() in LRUCache.warm.
   (Tomás Fernández Löbbe via shalin)
 
+* SOLR-6037: Fixed incorrect max/sum/stddev for Date fields in StatsComponent
+  (Brett Lucey, hossman)
+
 Other Changes
 ---------------------
 
